--- a/Contact-Card.html
+++ b/Contact-Card.html
@@ -6,11 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Card</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     <script src="js/date.js" async></script>
-    <!-- add bootstrap styles and JS here -->
+    <!-- add bootstrap styles and JS here (ok to put <script> tag in head
+        because async tag) -->
 </head>
 
 <body>
+    
     <!-- follow bootstrap layout classes for creating a grid: https://getbootstrap.com/docs/5.0/layout/grid/#example -->
     <div>
         <!-- Stretch Goal: create the top notification bar (time already created, just uncomment next line) -->
@@ -18,7 +22,12 @@
         <div>
             <div>
                 <!-- hint: see https://getbootstrap.com/docs/5.0/utilities/borders/#border-radius -->
-                <img src="..." alt="profile">
+                <div class="d-flex justify-content-center">
+                    <div class="card-header"><img src="/Images/download.jpeg" class="rounded-circle" alt="mountain">
+                        <div class="card-body"></div>
+                    </div>
+                </div>
+                <!-- <img src="..." alt="profile"> -->
                 <!-- Add your photo here -->
             </div>
         </div>
@@ -26,19 +35,42 @@
             <div>
                 <div>
                     <div>
+                        <div class="card border-light mb-3" style="max-width: 18rem;">
+                            <!-- <div class="card-header"></div>
+                            <div class="card-body"> -->
+                        </div> 
                         <!-- hint: see https://getbootstrap.com/docs/5.0/components/card -->
-                        <h3>Jacqueline Benson</h3>
+                        <div class="d-flex justify-content-center"><h3>Walter Saygers</h3></div>
                         <!-- Update this to be your name -->
                         <div>
-                            <div><!-- svg icon goes here (copy paste it from the provided Icons folder) --></div>
-                            <div><!-- svg icon goes here (copy paste it from the provided Icons folder) --></div>
-                            <div><!-- svg icon goes here (copy paste it from the provided Icons folder) --></div>
+                            <div class="container">
+                                <div class="row">
+                                  <div class="col-sm">
+                                    <div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 89.41 63.88"><defs><style>.cls-1{fill:#231f20;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Objects"><path class="cls-1" d="M44.73,44.73l-11-9.7L2,62.17a6.56,6.56,0,0,0,4.41,1.71H83a6.56,6.56,0,0,0,4.41-1.71L55.79,35Z"/><polygon class="cls-1" points="58.59 32.49 89.42 58.69 89.42 5.6 58.59 32.49"/><polygon class="cls-1" points="0 5.6 0 58.69 30.88 32.49 0 5.6"/><path class="cls-1" d="M87.39,1.76A6.28,6.28,0,0,0,83,0H6.43A6.37,6.37,0,0,0,2,1.76L44.73,38.35Z"/></g></g></svg><!-- svg icon goes here (copy paste it from the provided Icons folder) --></div>
+                                  </div>
+                                  <div class="col-sm">
+                                    <div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 61.36 59.8"><defs><style>.cls-1{fill:#231f20;fill-rule:evenodd;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Objects"><path class="cls-1" d="M61.13,46.94c.11,1,.56,1.7-.21,2.43L52.24,58a4.91,4.91,0,0,1-1.57,1.11,6.55,6.55,0,0,1-1.84.59,2.34,2.34,0,0,0-.42,0,6.39,6.39,0,0,1-.83,0,30.37,30.37,0,0,1-4-.42,31.24,31.24,0,0,1-6.81-2.12,57.74,57.74,0,0,1-9.14-5,67,67,0,0,1-10.88-9.17,75.09,75.09,0,0,1-7.61-8.66,60.38,60.38,0,0,1-4.83-7.61A42.56,42.56,0,0,1,1.5,20.46,33.5,33.5,0,0,1,.29,15.53,14.35,14.35,0,0,1,0,12.3c0-.8.07-1.22.07-1.32A5.84,5.84,0,0,1,.67,9.13,4.86,4.86,0,0,1,1.78,7.57c20.75-20.74,22,7.47,19.67,9.76l-3.23,3.24A.75.75,0,0,0,18,21a1.41,1.41,0,0,0-.11.49,11.24,11.24,0,0,0,1.19,3.13,30.13,30.13,0,0,0,2.39,3.86,51.35,51.35,0,0,0,4.66,5.21,46.08,46.08,0,0,0,5.25,4.65,30.69,30.69,0,0,0,3.82,2.47,10.53,10.53,0,0,0,2.36.94l.84.17a1.59,1.59,0,0,0,.41-.1,1.14,1.14,0,0,0,.42-.21c8.48-12.44,21-.77,21.89,5.35Z"/></g></g></svg><!-- svg icon goes here (copy paste it from the provided Icons folder) --></div>
+                                  </div>
+                                  <div class="col-sm">
+                                    <div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 63.88 63.88"><defs><style>.cls-1{fill:#231f20;fill-rule:evenodd;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Objects"><path class="cls-1" d="M47.1,49.89a50.77,50.77,0,0,1-6.45,12.83c.35-.1.69-.22,1-.33h0l.1,0q.78-.26,1.53-.54l.45-.17c.41-.17.83-.34,1.23-.52l.8-.37.86-.42c.39-.2.77-.42,1.15-.63l.5-.29c.46-.27.91-.56,1.35-.85l.3-.2c.42-.28.82-.58,1.22-.88.15-.11.3-.21.44-.33l.6-.49a31.31,31.31,0,0,0,2.36-2.1,32.4,32.4,0,0,0,3.49-4.2c.11-.15.23-.29.33-.44h0l0,0Z"/><path class="cls-1" d="M25.89,63.35a29.75,29.75,0,0,0,4.85.53v-14H18.56A46.28,46.28,0,0,0,25.89,63.35Z"/><path class="cls-1" d="M13.17,33.15H0A31.61,31.61,0,0,0,4,47.56H15.3A57.69,57.69,0,0,1,13.17,33.15Z"/><path class="cls-1" d="M33.18,30.74H48.34A54.3,54.3,0,0,0,46.1,16.32h-.73v0H33.18v0h0V30.74Z"/><path class="cls-1" d="M15.54,30.74h15.2V16.29h-13A54.72,54.72,0,0,0,15.54,30.74Z"/><path class="cls-1" d="M15.33,16.29H4A31.63,31.63,0,0,0,0,30.74H13.17A56.4,56.4,0,0,1,15.33,16.29Z"/><path class="cls-1" d="M33.18,49.89v14a27,27,0,0,0,3.93-.39,46.06,46.06,0,0,0,7.47-13.6Z"/><path class="cls-1" d="M5.49,49.89A31.82,31.82,0,0,0,22.31,62.43,49.9,49.9,0,0,1,16,49.89Z"/><path class="cls-1" d="M16.78,14A50.7,50.7,0,0,1,23.23,1.17c-.35.09-.68.21-1,.32h0l-.1,0c-.52.16-1,.34-1.53.53l-.45.18q-.61.24-1.23.51l-.8.37-.86.43c-.39.2-.77.41-1.15.63l-.5.28c-.46.27-.9.56-1.35.85l-.3.2c-.42.28-.82.58-1.22.89l-.44.32-.6.49c-.82.67-1.61,1.36-2.36,2.1a33.8,33.8,0,0,0-3.49,4.2c-.1.15-.23.29-.33.44h0l0,0Z"/><path class="cls-1" d="M38,.53A32.13,32.13,0,0,0,33.14,0V14H45.33A46.54,46.54,0,0,0,38,.53Z"/><path class="cls-1" d="M50.71,30.74H63.88a31.68,31.68,0,0,0-4-14.42H48.58A57.84,57.84,0,0,1,50.71,30.74Z"/><path class="cls-1" d="M30.7,33.14H15.54a54.29,54.29,0,0,0,2.24,14.41h.73v0H30.7v0h0V33.15h0Z"/><path class="cls-1" d="M48.34,33.14H33.14V47.59h13A54.72,54.72,0,0,0,48.34,33.14Z"/><path class="cls-1" d="M48.55,47.59H59.84a31.6,31.6,0,0,0,4-14.45H50.71A56.4,56.4,0,0,1,48.55,47.59Z"/><path class="cls-1" d="M30.7,14V0a30.06,30.06,0,0,0-3.93.39A46.29,46.29,0,0,0,19.3,14Z"/><path class="cls-1" d="M58.39,14a32.31,32.31,0,0,0-3.86-4.68,31.85,31.85,0,0,0-13-7.86A49.9,49.9,0,0,1,47.84,14Z"/></g></g></svg><!-- svg icon goes here (copy paste it from the provided Icons folder) --></div>
+                                  </div>
+                                </div>
+                              </div>
                         </div>
                         <hr />
                         <div>
-                            <div><!-- svg icon goes here (copy paste it from the provided Icons folder) --></div>
-                            <div><!-- svg icon goes here (copy paste it from the provided Icons folder) --></div>
-                            <div><!-- svg icon goes here (copy paste it from the provided Icons folder) --></div>
+                            <div class="container">
+                                <div class="row">
+                                  <div class="col-sm">
+                                    <div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 47.04 47.04"><defs><style>.cls-1{fill:#231f20;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Objects"><path class="cls-1" d="M23.52,4.24c6.28,0,7,0,9.5.13a13.2,13.2,0,0,1,4.37.81A7.43,7.43,0,0,1,40.1,6.94a7.28,7.28,0,0,1,1.75,2.71A12.68,12.68,0,0,1,42.66,14c.12,2.48.14,3.22.14,9.5s0,7-.14,9.5a12.68,12.68,0,0,1-.81,4.37,7.67,7.67,0,0,1-4.46,4.46,12.68,12.68,0,0,1-4.37.81c-2.48.12-3.22.14-9.5.14s-7,0-9.5-.14a12.68,12.68,0,0,1-4.37-.81A7.28,7.28,0,0,1,6.94,40.1a7.43,7.43,0,0,1-1.76-2.71A13.2,13.2,0,0,1,4.37,33c-.11-2.48-.13-3.22-.13-9.5s0-7,.13-9.5a13.2,13.2,0,0,1,.81-4.37A7.77,7.77,0,0,1,9.65,5.18,13.2,13.2,0,0,1,14,4.37c2.48-.11,3.22-.13,9.5-.13m0-4.24c-6.39,0-7.19,0-9.7.14A17.51,17.51,0,0,0,8.11,1.23,11.69,11.69,0,0,0,4,4,11.69,11.69,0,0,0,1.23,8.11,17.51,17.51,0,0,0,.14,13.82C0,16.33,0,17.13,0,23.52s0,7.19.14,9.7a17.51,17.51,0,0,0,1.09,5.71A11.69,11.69,0,0,0,4,43.09,11.53,11.53,0,0,0,8.11,45.8a17.22,17.22,0,0,0,5.71,1.1c2.51.11,3.31.14,9.7.14s7.19,0,9.7-.14a17.22,17.22,0,0,0,5.71-1.1,12,12,0,0,0,6.87-6.87,17.22,17.22,0,0,0,1.1-5.71c.11-2.51.14-3.31.14-9.7s0-7.19-.14-9.7a17.22,17.22,0,0,0-1.1-5.71A11.53,11.53,0,0,0,43.09,4a11.69,11.69,0,0,0-4.16-2.72A17.51,17.51,0,0,0,33.22.14C30.71,0,29.91,0,23.52,0"/><path class="cls-1" d="M23.52,11.44A12.08,12.08,0,1,0,35.6,23.52,12.08,12.08,0,0,0,23.52,11.44m0,19.92a7.84,7.84,0,1,1,7.84-7.84,7.84,7.84,0,0,1-7.84,7.84"/><path class="cls-1" d="M38.9,11a2.83,2.83,0,1,1-2.83-2.82A2.83,2.83,0,0,1,38.9,11"/></g></g></svg><!-- svg icon goes here (copy paste it from the provided Icons folder) --></div>
+                                  </div>
+                                  <div class="col-sm">
+                                    <div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 63.96 51.98"><defs><style>.cls-1{fill:#231f20;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Objects"><path id="LOGO" class="cls-1" d="M56.42,8.22A26.07,26.07,0,0,0,64,6.15,26.8,26.8,0,0,1,57.41,13c0,.56,0,1.13,0,1.69C57.45,32,44.25,52,20.11,52A37.16,37.16,0,0,1,0,46.09a27,27,0,0,0,3.13.18,26.33,26.33,0,0,0,16.3-5.62A13.14,13.14,0,0,1,7.17,31.54a13.3,13.3,0,0,0,5.93-.23A13.12,13.12,0,0,1,2.57,18.45v-.17a13,13,0,0,0,5.94,1.64A13.13,13.13,0,0,1,4.45,2.4,37.25,37.25,0,0,0,31.5,16.11a12.81,12.81,0,0,1-.34-3,13.12,13.12,0,0,1,22.7-9A26.34,26.34,0,0,0,62.19,1,13.16,13.16,0,0,1,56.42,8.22Z"/></g></g></svg><!-- svg icon goes here (copy paste it from the provided Icons folder) --></div>
+                                  </div>
+                                  <div class="col-sm">
+                                    <div><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 74.28 72.44"><defs><style>.cls-1{fill:#181616;fill-rule:evenodd;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Objects"><path class="cls-1" d="M37.14,0A37.14,37.14,0,0,0,25.4,72.38c1.86.34,2.54-.8,2.54-1.79s0-3.22-.06-6.32c-10.33,2.25-12.51-5-12.51-5-1.68-4.29-4.12-5.44-4.12-5.44-3.37-2.3.26-2.25.26-2.25,3.72.26,5.68,3.82,5.68,3.82,3.32,5.68,8.7,4,10.81,3.09a8,8,0,0,1,2.36-5c-8.25-.93-16.92-4.12-16.92-18.35a14.35,14.35,0,0,1,3.83-10,13.31,13.31,0,0,1,.36-9.83s3.12-1,10.21,3.81a35.22,35.22,0,0,1,18.6,0c7.09-4.81,10.2-3.81,10.2-3.81A13.33,13.33,0,0,1,57,25.23a14.34,14.34,0,0,1,3.82,10c0,14.27-8.68,17.41-17,18.32,1.34,1.15,2.52,3.42,2.52,6.88,0,5,0,9,0,10.19,0,1,.67,2.15,2.55,1.79A37.15,37.15,0,0,0,37.14,0Z"/></g></g></svg><!-- svg icon goes here (copy paste it from the provided Icons folder) --></div>                                  </div>
+                                </div>
+                              </div>
                         </div>
                     </div>
                 </div>
@@ -46,5 +78,6 @@
         </div>
         <!-- <div> Stretch goal: Create bottom button bar</div> -->
     </div>
+    
 </body>
 </html>
